# SAFRAN_ENSAI_2025_GNN_Engine

./: .gitignore  README.md  requirements.txt  setup.sh
GNN_tutorial/: 1_Introduction.ipynb  2_Node_Classification.ipynb  3_Graph_Classification.ipynb  4_Graph_Classification_TImeSeries_MTM.ipynb
code/: data_section_analysis.ipynb  data_stats.ipynb  engine_fault_analysis.ipynb  graph_construction_SAFRAN.ipynb  model_cnn.ipynb  model_lstm.ipynb  model_mlp.ipynb  model_pyg_static.ipynb  model_pyg_temporal.ipynb  model_traditional_ml.ipynb
data/: Cie_0_Engine0.csv  Cie_0_Engine1.csv  Cie_0_Engine10.csv  Cie_0_Engine11.csv  Cie_0_Engine12.csv  Cie_0_Engine13.csv  Cie_0_Engine14.csv  Cie_0_Engine15.csv  Cie_0_Engine16.csv  Cie_0_Engine17.csv  Cie_0_Engine18.csv  Cie_0_Engine19.csv  Cie_0_Engine2.csv  Cie_0_Engine20.csv  Cie_0_Engine21.csv  Cie_0_Engine22.csv  Cie_0_Engine23.csv  Cie_0_Engine24.csv  Cie_0_Engine25.csv  Cie_0_Engine26.csv  Cie_0_Engine27.csv  Cie_0_Engine28.csv  Cie_0_Engine29.csv  Cie_0_Engine3.csv  Cie_0_Engine30.csv  (+228 more)
engine_simulator/: README.md  performancemodel_ENSAI.gitignore  pyproject.toml
engine_simulator/notebook/: Challenge.ipynb  Tutorial_Simple_Corps_Simple_Flux.ipynb
engine_simulator/src/performancemodel/: __init__.py  base_system.py  helper.py  maps.py  module.py  parser_data.py  plot.py  scenarios.py  turboreactors.py
engine_simulator/src/performancemodel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
engine_simulator/src/performancemodel/data/: Ge10stg.txt  Ge10stg_compact.csv  Ge10stg_compact_beta.csv
